--- a/src/components/items/styles/styles.module.css
+++ b/src/components/items/styles/styles.module.css
@@ -33,9 +33,13 @@
 .title{
     color: #333333;
     font-size: 13px;
-    height: 50px;
+    height: 38px;    
     overflow: hidden;
     margin: 7px 0 15px 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 .container{
     display: flex;
